--- a/index.html
+++ b/index.html
@@ -68,17 +68,15 @@
                         <div class="media-body">
                             <h3 class="mt-0">About me</h3>
                             <p class="lead">
-                                Hi! I'm a PostDoc Researcher at <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) unit 
-                                at the <a href="https://www.fbk.eu/en/">Fondazione Bruno Kessler</a> (FBK) in Trento, IT. 
+                                Hi! I'm a Researc Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) Lab 
+                                of the <a href="https://www.fbk.eu/en/">Fondazione Bruno Kessler</a> (FBK) in Trento, IT. 
                                 I got my PhD in Computational Science under the supervision of prof. 
                                 <a href="https://www.imperial.ac.uk/people/m.bronstein">Michael Bronstein</a>
-                                at <a href="https://www.usi.ch/en">Univerista' della Svizzera Italiana</a> (USI) in Lugano, CH.
-                                My research interests are in the field of 
-                                Geometric Deep Learning, Computer Vision and Shape Analysis.
+                                from the <a href="https://www.usi.ch/en">Univerista' della Svizzera Italiana</a> (USI) in Lugano, CH.
+                                My research interests include 3D Computer Vision, 3D Deep Learning, and Geometric Deep Learning.
                             </p>
                         </div>
-                        <img class="align-self-start mr-3" src="./data/portrait_170928.jpg" 
-                            alt="Portrait" width="200" height="267">
+                        <img class="align-self-start mr-3" src="./data/portrait_170928.jpg" alt="Portrait" width="200" height="267">
                         <!-- original size: width = 1098, height = 1464 -->
                     </div>
                 </li>
