--- a/sections/publications.html
+++ b/sections/publications.html
@@ -100,8 +100,8 @@
                     <p class="mb-1"><i>Nature Methods</i>, 2020
                         &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font></p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
-                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a> -->
+                    <!-- <a href="#" class="badge badge-primary">biblio</a> -->
                 </li>
 
 
@@ -119,8 +119,8 @@
                         <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
                     <p class="mb-1"><i>NeurIPS Workshop on Graph Representation Learning</i>, 2019</p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
-                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a> -->
+                    <!-- <a href="#" class="badge badge-primary">biblio</a> -->
                 </li>
 
 
@@ -139,12 +139,12 @@
                     <p class="mb-1"><i>International Conference on 3D Vision (3DV)</i>, 2019
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
-                    <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
-                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
-                    <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a> -->
+                    <!-- <a href="#" class="badge badge-primary">pdf</a> -->
+                    <!-- <a href="#" class="badge badge-primary">biblio</a> -->
+                    <!-- <a href="#" class="badge badge-primary">slides</a> -->
+                    <!-- <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a> -->
+                    <!-- <a href="#" class="badge badge-primary">video</a> -->
+                    <!-- <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
                 <!-- 2019, 3D Shape Segmentation -->
@@ -163,8 +163,8 @@
                     <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> 
                         <a href="https://arxiv.org/abs/2002.00397">arXiv:2002.00397 </a></small><br>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
-                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a> -->
+                    <!-- <a href="#" class="badge badge-primary">biblio</a> -->
                     <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
@@ -189,9 +189,9 @@
                     <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> 
                         <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -210,9 +210,9 @@
                     <p class="mb-1"><i>Neural Information Processing Systems (NIPS)</i>, 2016</p>
                     <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -233,9 +233,9 @@
                     <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2016 
                         &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2016</font></p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -257,9 +257,9 @@
                     <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
                         &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2015</font></p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -282,9 +282,9 @@
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
                         <!-- International -->
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -304,9 +304,9 @@
                     <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
                         &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2015</font></p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -327,9 +327,9 @@
                     <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, 2014
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -348,9 +348,9 @@
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
                     <p class="mb-1"><i>The Visual Computer (TVC)</i>, 2014</p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
@@ -370,9 +370,9 @@
                     <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, 2013
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
 
-                    <a href="#" class="badge badge-primary">pdf</a>
+                    <!-- <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
