--- a/sections/publications.html
+++ b/sections/publications.html
@@ -184,7 +184,7 @@
                     <p class="mb-1">Federico Monti*, <strong>Davide Boscaini</strong>*, Jonathan Masci, 
                         Emanuele Rodolà, Jan Svoboda, Michael M. Bronstein 
                         &emsp; <small><font color="#979797">(* denotes equal contibution)</font></small></p>
-                    <p class="mb-1"><i>Computer Vision and Pattern Recognition Conference (CVPR)</i>, 2017 
+                    <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2017 
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
                     <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> 
                         <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
@@ -207,7 +207,7 @@
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein</p>
-                    <p class="mb-1"><i>Neural Information Processing Systems (NIPS)</i>, 2016</p>
+                    <p class="mb-1"><i>Neural Information Processing Systems (NeurIPS)</i>, 2016</p>
                     <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br>
 
                     <!-- <a href="#" class="badge badge-primary">pdf</a>
