--- a/publications.html
+++ b/publications.html
@@ -45,11 +45,11 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024</p>
-          <p class="mb-1"></p><font color="#899499">TLDR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest.</font></p>
-
-          <a class="btn btn-primary btn-sm" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <p class="mb-1"><font color="#899499">TLDR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest instead of its 3D model or a video capturing it.</font></p>
+          <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
+          <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://github.com/jcorsetti/"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <p></p>
         </li>
 
         <!-- BMVC 2023 -->
@@ -62,7 +62,7 @@
           </div>
           <p class="mb-1">Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2023</p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
+          <!-- <p class="mb-1"><font color="#899499">TLDR: TBD.</font></p> -->
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2308.15353"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/mohamedtev/daca"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
@@ -79,7 +79,7 @@
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023
             &mdash; <font color="#a21a2a">Held in conjunction with ICCV 2023</font></p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR: TBD.</font></p> -->
+          <!-- <p class="mb-1"><font color="#899499">TLDR: TBD.</font></p> -->
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
@@ -95,7 +95,7 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-          <p class="mb-1"></p><font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
+          <p class="mb-1"><font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
           Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong></a>
@@ -114,7 +114,7 @@
           </div>
           <p class="mb-1">Pietro Astolfi, Ruben Verhagen, Laurent Petit, Emanuele Olivetti, Silvio Sarubbo, Jonathan Masci, <strong>Davide Boscaini</strong>, Paolo Avesani</p>
           <p class="mb-1"><i>Medical Image Analysis (MIA)</i>, 2023</p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
+          <!-- <p class="mb-1"><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
 
           <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S1361841523001536?via%3Dihub"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2212.03300"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
@@ -131,7 +131,7 @@
           <p class="mb-1">Luigi Riz, Andrea Caraffa, Matteo Bortolon, Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, André Moura, José Antunes, André Dias, Hugo Silva, Andreas Leonidou, Christos Constantinides, Christos Keleshis, Dante Abate, Fabio Poiesi</p>
             <p class="mb-1"><i>Multimodal Learning and Applications Workshop (MULA)</i>, 2023
               &mdash; <font color="#a21a2a">Held in conjunction with CVPR 2023</font></p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR:</font></p> -->
+          <!-- <p class="mb-1"><font color="#899499">TLDR:</font></p> -->
 
           <!-- <a class="btn btn-primary btn-sm" href=""><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a> -->
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2304.05417"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
@@ -148,7 +148,7 @@
           </div>
           <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
           <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (PAMI)</i>, 2023</p>
-          <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
+          <p class="mb-1"><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
@@ -165,7 +165,7 @@
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi, Stefano Messelodi, Ayman Younes, Donato A. Grande</p>
           <p class="mb-1"><i>International Workshop on Industrial Machine Learning (IML)</i>, 2020
             &mdash; <font color="#a21a2a">Held in conjunction with ICPR 2020, Oral presentation</font></p>
-          <!-- <p class="mb-1"></p><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p> -->
+          <!-- <p class="mb-1"><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p> -->
 
           <a class="btn btn-primary btn-sm" href="https://dl.acm.org/doi/abs/10.1007/978-3-030-68799-1_50"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
