--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024</p>
-          <p class="mb-1"><font color="#899499">TLDR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest instead of its 3D model or a video capturing it.</font></p>
+          <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest instead of its 3D model or a video capturing it.</font></p>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://github.com/jcorsetti/"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
@@ -95,7 +95,7 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-          <p class="mb-1"><font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
+          <p class="mb-1"><font color="#899499">TL;DR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
           Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong></a>
@@ -148,7 +148,7 @@
           </div>
           <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
           <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (PAMI)</i>, 2023</p>
-          <p class="mb-1"><font color="#899499">TLDR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
+          <p class="mb-1"><font color="#899499">TL;DR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/gedi"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
