--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,8 @@
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
             &mdash; <font color="#a21a2a">Highlight poster (11.9% acceptance rate)</font></p>
-          <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest instead of its 3D model or a video capturing it.</font></p>
+          <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation, in which a textual prompt is used to specify the object of interest
+            instead of its 3D model or video footage captured from multiple viewpoints around the object</font></p>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://github.com/jcorsetti/"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
@@ -63,10 +64,10 @@
           </div>
           <p class="mb-1">Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2023</p>
-          <!-- <p class="mb-1"><font color="#899499">TLDR: TBD.</font></p> -->
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2308.15353"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/mohamedtev/daca"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <p></p>
         </li>
 
         <!-- ICCV-W 2023 -->
@@ -84,6 +85,7 @@
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <p></p>
         </li>
 
         <!-- IMAVIS 2023 -->
@@ -96,13 +98,14 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-          <p class="mb-1"><font color="#899499">TL;DR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
-          Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
+          <p class="mb-1"><font color="#899499">TL;DR: We introduce a novel network design that demonstrates strong generalization performance across datasets unseen during training. 
+            PatchMixer achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://www.sciencedirect.com/science/article/abs/pii/S0262885623001427"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
+          <p></p>
         </li>
 
         <!-- MIA 2023 -->
